<resources>
    <string name="app_name">GestionBudget</string>
    <string name="solde">Solde :</string>
    <string name="valeur">235,78</string>
    <string name="euros">€</string>
    <string name="ajoutRevenus">Ajouter des Revenus</string>
    <string name="ajoutDepenses">Ajouter des Dépenses</string>
    <string name="detail">Voir le detail.</string>
    <string name="acces_aux_parametres">acces aux parametres</string>
    <string name="nouveau_revenu"><u>Nouveau Revenu :</u></string>
    <string name="montant">Montant* :</string>
    <string name="categorie">Catégorie* :</string>
    <string name="note">Note* :</string>
    <string name="ajouter">Ajouter</string>
    <string name="nouvelle_depense"><u>Nouvelle Dépense :</u></string>
    <string name="dureeCycle"><u>Durée de cycle :</u></string>
    <string name="modifierDuree"><u>Modifier la durée de gestion :</u></string>
    <string name="appliquer">Appliquer</string>
    <string name="Attention">ATTENTION : votre solde et vos dépenses seront effacés.</string>
    <string name="textJours">Jours</string>
    <string name="reinitialiserCycle">Réinitialiser les données</string>
    <string name="txtReinitialiserCycle"><u>Réinitialiser les données :</u></string>
    <string name="ajouterCategorie"><u>Ajouter Catégorie</u></string>
    <string name="nom">Nom* :</string>
    <string name="description">Description* :</string>
    <string name="modifierCategorie"><u>Modifier Catégorie</u></string>
    <string name="MenuParametres"><u>Paramètres :</u></string>
    <string name="btnParametresCategorie">Ajouter une catégorie</string>
    <string name="btnReinitialiser">Réinitialiser les données</string>
    <string name="titreDetail"><u>Détail :</u></string>
    <string name="revenus">Revenus :</string>
    <string name="sommeRevenus">520.6</string>
    <string name="depenses">Dépenses :</string>
    <string name="sommeDepenses">302.4</string>
    <string name="retour">Retour</string>
    <string name="modifier">Modifier</string>
    <string name="bouton_de_modification">bouton de modification</string>
    <string name="btn_ajout_categorie">btn ajout categorie</string>
    <string name="channel_name">nom</string>
    <string name="channel_description">description</string>
    <string name="notification_channel_description">oui</string>
</resources>