<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    android:screenOrientation="portrait"
    tools:context=".ajoutDepenses">

    <TextView
        android:id="@+id/textViewList"
        android:layout_width="341dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/nouvelle_depense"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/saisieMontant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textMontany"
        app:layout_constraintTop_toBottomOf="@+id/textViewList" />

    <TextView
        android:id="@+id/textMontany"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="52dp"
        android:text="@string/montant"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewList" />

    <TextView
        android:id="@+id/textCategorie"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/categorie"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMontany" />

    <TextView
        android:id="@+id/textNote"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/note"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCategorie" />

    <Spinner
        android:id="@+id/listeDeroulante"
        android:layout_width="178dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:addStatesFromChildren="false"
        android:background="@color/white"
        android:descendantFocusability="beforeDescendants"
        android:drawSelectorOnTop="true"
        android:drawingCacheQuality="high"
        android:dropDownWidth="wrap_content"
        android:dropDownSelector="@color/black"
        android:foreground="@android:drawable/ic_menu_more"
        android:foregroundGravity="center|right"
        android:popupBackground="@color/white"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/textCategorie"
        app:layout_constraintTop_toBottomOf="@+id/saisieMontant"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/zoneTexte"
        android:layout_width="340dp"
        android:layout_height="171dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNote" />

    <Button
        android:id="@+id/bouton_modifier"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:text="@string/ajouter"
        android:textSize="15sp"
        app:backgroundTint="@color/grisFoncé"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoneTexte"
        app:layout_constraintVertical_bias="0.229" />

    <ImageButton
        android:id="@+id/boutonModifier"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textNote"
        app:layout_constraintStart_toEndOf="@+id/listeDeroulante"
        app:layout_constraintTop_toBottomOf="@+id/saisieMontant"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/boutonAjouterCategorie"
        android:layout_width="54dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/boutonModifier"
        app:layout_constraintStart_toStartOf="@+id/boutonModifier"
        app:layout_constraintTop_toBottomOf="@+id/saisieMontant"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_add" />

</androidx.constraintlayout.widget.ConstraintLayout>